[package]
authors = ["Jens Reimann <ctron@dentrassi.de>"]
categories = ["embedded", "memory-management" ,"no-std"]
description = "An allocator for the ESP32 based on the ESP-IDF."
keywords = ["alloc", "esp32", "esp"]
license = "EPL-2.0"
name = "esp-idf-alloc"
repository = "https://github.com/ctron/esp-idf-alloc"
version = "0.1.1"
edition = "2018"
readme = "README.md"
